Se agrega documentacion y mailCOnfig